--- a/MauiAppDemo/Components/Layout/NavMenu.razor
+++ b/MauiAppDemo/Components/Layout/NavMenu.razor
@@ -24,8 +24,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="todo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ToDo
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="democomponent">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Demo
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Parameter
             </NavLink>
         </div>
     </nav>
